force-app/main/default/objects/Esthetic_Treatment_Today__c/Esthetic_Treatment_Today__c.object-meta.xml
<CustomObject>
    <label>Esthetic Treatment Today</label>
    <nameField>
        <label>Aesthetic Treatment Today Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Esthetic Treatment Today</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>