force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Aesthetic_Treatment_Today__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_Treatment_Today__c</fullName>
    <label>Aesthetic Treatment Today</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CoolSculpting</fullName>
            </value>
            <value>
                <fullName>Facial</fullName>
            </value>
            <value>
                <fullName>Hydrafacial</fullName>
            </value>
            <value>
                <fullName>Peel</fullName>
            </value>
            <value>
                <fullName>Thermage</fullName>
            </value>
            <value>
                <fullName>IPL</fullName>
            </value>
            <value>
                <fullName>SculpSure</fullName>
            </value>
            <value>
                <fullName>Ultherapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>