force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Coolsculpt_Procedure_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Coolsculpt_Procedure_Checklist__c</fullName>
    <label>Coolsculpt Procedure Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient asked if they need to use the restroom</fullName>
            </value>
            <value>
                <fullName>Patients abdomen cleaned with alcohol</fullName>
            </value>
            <value>
                <fullName>Marking pen used to outline the template</fullName>
            </value>
            <value>
                <fullName>Patient is seated, gel pad is applied (abdomen), Patient is standing (cool curve plus, cool smooth) and gel pad applied</fullName>
            </value>
            <value>
                <fullName>Liner planed on the applicator</fullName>
            </value>
            <value>
                <fullName>applicator is positioned in marked areas and is checked for adequate tissue draw up to or beyond metal markers</fullName>
            </value>
            <value>
                <fullName>Pillow is positioned to support applicator</fullName>
            </value>
            <value>
                <fullName>Call button and pager activate</fullName>
            </value>
            <value>
                <fullName>Water and comfort materials (cell phone, book) brought to easily accessibly</fullName>
            </value>
            <value>
                <fullName>location</fullName>
            </value>
            <value>
                <fullName>Patient reminded not to reach or move to dislodge the applicator</fullName>
            </value>
            <value>
                <fullName>Setting 60-75-60</fullName>
            </value>
            <value>
                <fullName>Patient notified that in last 5 min, a cool sensation may be apparent that is reflective of a massage phase</fullName>
            </value>
            <value>
                <fullName>Pre treatment photos taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>