force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/CoolSculpting__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting__c</fullName>
    <label>CoolSculpting Treatment Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arms</fullName>
            </value>
            <value>
                <fullName>Flanks</fullName>
            </value>
            <value>
                <fullName>Upper Abdomen</fullName>
            </value>
            <value>
                <fullName>Lower Abdomen</fullName>
            </value>
            <value>
                <fullName>Inner Thigh</fullName>
            </value>
            <value>
                <fullName>Outer Thigh</fullName>
            </value>
            <value>
                <fullName>Banana Roll</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>middle abdomen</fullName>
            </value>
            <value>
                <fullName>upper flank</fullName>
            </value>
            <value>
                <fullName>lower flank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>