force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Coolsculpting_Date__c.field-meta.xml
<CustomField>
    <fullName>Coolsculpting_Date__c</fullName>
    <label>Coolsculpting Date</label>
    <type>Date</type>
</CustomField>