force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/CoolSculpting_Treatment_Applicator__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Treatment_Applicator__c</fullName>
    <label>CoolSculpting Treatment Applicator</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coolcurve</fullName>
            </value>
            <value>
                <fullName>CoolCore</fullName>
            </value>
            <value>
                <fullName>CoolFit</fullName>
            </value>
            <value>
                <fullName>CoolMax</fullName>
            </value>
            <value>
                <fullName>CoolSmooth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>