force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/CoolSculpting_Treatments_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Treatments_Minutes__c</fullName>
    <label>CoolSculpting Treatments Minutes</label>
    <type>Time</type>
</CustomField>