force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/CoolSculpting_Treatments_Notes__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Treatments_Notes__c</fullName>
    <label>CoolSculpting Treatments Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>