force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/CoolSculpting_Treatments_Number__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Treatments_Number__c</fullName>
    <label>CoolSculpting Treatments Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>