force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/CoolSculpting_Weight__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Weight__c</fullName>
    <label>CoolSculpting Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>