force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Goals_of_Coolsculpting_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Goals_of_Coolsculpting_Procedure__c</fullName>
    <label>Goals of Coolsculpting Procedure</label>
    <type>TextArea</type>
</CustomField>