force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/IPL_Laser_consents_signed__c.field-meta.xml
<CustomField>
    <fullName>IPL_Laser_consents_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPL Laser consents signed</label>
    <type>Checkbox</type>
</CustomField>