force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/IPL_Laser_lux_lotion_applied__c.field-meta.xml
<CustomField>
    <fullName>IPL_Laser_lux_lotion_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPL Laser lux lotion applied</label>
    <type>Checkbox</type>
</CustomField>