force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/IPL_Laser_photos_taken__c.field-meta.xml
<CustomField>
    <fullName>IPL_Laser_photos_taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPL Laser photos taken</label>
    <type>Checkbox</type>
</CustomField>