force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/IPL_Laser_self_tanner_spray_tanner__c.field-meta.xml
<CustomField>
    <fullName>IPL_Laser_self_tanner_spray_tanner__c</fullName>
    <description>IPL Laser self-tanner/spray-tanner in last 7 days</description>
    <label>IPL Laser self-tanner/spray-tanner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>