force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Sculpsure_Pre_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Sculpsure_Pre_Clicks__c</fullName>
    <description>Sculpsure Pre Clicks remaining on key post treatment</description>
    <label>Sculpsure Pre Clicks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>