force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Sculpsure_Pre_Clicks_on_key__c.field-meta.xml
<CustomField>
    <fullName>Sculpsure_Pre_Clicks_on_key__c</fullName>
    <description>Sculpsure Pre Clicks on key prior to treatment</description>
    <label>Sculpsure Pre Clicks on key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>