force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Sculpsure_Pre_of_PAC_s_Used__c.field-meta.xml
<CustomField>
    <fullName>Sculpsure_Pre_of_PAC_s_Used__c</fullName>
    <label>Sculpsure Pre # of PAC’s Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>