force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Sculpsure_Pre_TX__c.field-meta.xml
<CustomField>
    <fullName>Sculpsure_Pre_TX__c</fullName>
    <label>Sculpsure Pre TX#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>