force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Sculpsure_Pre_Tx_Photo_Taken__c.field-meta.xml
<CustomField>
    <fullName>Sculpsure_Pre_Tx_Photo_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sculpsure Pre Tx Photo Taken</label>
    <type>Checkbox</type>
</CustomField>