force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Theramage__c.field-meta.xml
<CustomField>
    <fullName>Theramage__c</fullName>
    <label>Thermage Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>