force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Thermage_Post_Procedure_Details__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Post_Procedure_Details__c</fullName>
    <label>Thermage Post Procedure Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>