force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Thermage_Post_Procedure_Discomfert__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Post_Procedure_Discomfert__c</fullName>
    <label>Thermage Post Procedure Discomfert</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>moderate</fullName>
            </value>
            <value>
                <fullName>severe</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>