force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Thermage_Procedure_Area_TX_Settings__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Procedure_Area_TX_Settings__c</fullName>
    <description>Min/Max</description>
    <label>Thermage Procedure Area TX Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>