force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Thermage_Procedure_Staggered_TX_setting__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Procedure_Staggered_TX_setting__c</fullName>
    <description>Min/Max</description>
    <label>Thermage Procedure Staggered TX setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>