force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Thermage_Procedure_Vector_Passes__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Procedure_Vector_Passes__c</fullName>
    <label>Thermage Procedure Vector #Passes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>