force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Thermage_Procedure_Vector_Rep_s__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Procedure_Vector_Rep_s__c</fullName>
    <label>Thermage Procedure Vector Rep&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>