force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Thermage_Procedure_Vector_TX_Setting__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Procedure_Vector_TX_Setting__c</fullName>
    <description>Min/Max</description>
    <label>Thermage Procedure Vector TX Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>