force-app/main/default/objects/Esthetic_Treatment_Today__c/fields/Ul__c.field-meta.xml
<CustomField>
    <fullName>Ul__c</fullName>
    <label>Ultherapy Image Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.5 mm Face</fullName>
            </value>
            <value>
                <fullName>3.0 mm Face</fullName>
            </value>
            <value>
                <fullName>4.5 mm Face</fullName>
            </value>
            <value>
                <fullName>3.0 mm Neck</fullName>
            </value>
            <value>
                <fullName>4.5 mm Neck</fullName>
            </value>
            <value>
                <fullName>3.0 mm Chest</fullName>
            </value>
            <value>
                <fullName>4.5 mm Chest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>